--- a/app/src/main/res/layout/fragment_insight.xml
+++ b/app/src/main/res/layout/fragment_insight.xml
@@ -160,59 +160,22 @@
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="20dp">
+                        android:layout_height="match_parent">
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="160dp"
+                            android:layout_width="150dp"
                             android:layout_height="180dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="10dp"
+                            android:layout_margin="10dp"
                             app:cardBackgroundColor="#EFF8EA"
                             app:cardCornerRadius="10dp"
                             app:cardElevation="8dp">
 
                             <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:layout_margin="10dp"
                                 android:orientation="vertical"
-                                android:layout_gravity="center_horizontal"
-                                android:padding="10dp">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/bariol_regular"
-                                    android:text="All About Leaky Gut" />
-
-                                <TextView
-                                    android:id="@+id/textView15"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/bariol_light"
-                                    android:text="@string/placeholder_text" />
-
-                            </LinearLayout>
-
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="160dp"
-                            android:layout_height="180dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="10dp"
-                            app:cardBackgroundColor="#EFF8EA"
-                            app:cardCornerRadius="10dp"
-                            app:cardElevation="8dp">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="10dp"
-                                android:orientation="vertical"
-                                android:layout_gravity="center_horizontal"
-                                android:padding="10dp">
+                                android:layout_gravity="center_horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -229,30 +192,58 @@
                             </LinearLayout>
 
                         </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="150dp"
+                            android:layout_height="180dp"
+                            android:layout_margin="10dp"
+                            app:cardBackgroundColor="#EFF8EA"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="8dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_margin="10dp"
+                                android:orientation="vertical"
+                                android:layout_gravity="center_horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/bariol_regular"
+                                    android:text="All About Leaky Gut" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/bariol_light"
+                                    android:text="@string/placeholder_text" />
+
+                            </LinearLayout>
+
+                        </androidx.cardview.widget.CardView>
+
                     </TableRow>
-
 
                     <TableRow
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="20dp">
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="160dp"
+                            android:layout_width="150dp"
                             android:layout_height="180dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="10dp"
+                            android:layout_margin="10dp"
                             app:cardBackgroundColor="#EFF8EA"
                             app:cardCornerRadius="10dp"
                             app:cardElevation="8dp">
 
                             <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:layout_margin="10dp"
                                 android:orientation="vertical"
-                                android:layout_gravity="center_horizontal"
-                                android:padding="10dp">
+                                android:layout_gravity="center_horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -271,21 +262,19 @@
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="160dp"
+                            android:layout_width="150dp"
                             android:layout_height="180dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="10dp"
+                            android:layout_margin="10dp"
                             app:cardBackgroundColor="#EFF8EA"
                             app:cardCornerRadius="10dp"
                             app:cardElevation="8dp">
 
                             <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:layout_margin="10dp"
                                 android:orientation="vertical"
-                                android:layout_gravity="center_horizontal"
-                                android:padding="10dp">
+                                android:layout_gravity="center_horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -302,29 +291,27 @@
                             </LinearLayout>
 
                         </androidx.cardview.widget.CardView>
+
                     </TableRow>
-
 
                     <TableRow
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="160dp"
+                            android:layout_width="150dp"
                             android:layout_height="180dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="10dp"
+                            android:layout_margin="10dp"
                             app:cardBackgroundColor="#EFF8EA"
                             app:cardCornerRadius="10dp"
                             app:cardElevation="8dp">
 
                             <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:layout_margin="10dp"
                                 android:orientation="vertical"
-                                android:layout_gravity="center_horizontal"
-                                android:padding="10dp">
+                                android:layout_gravity="center_horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -343,21 +330,19 @@
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="160dp"
+                            android:layout_width="150dp"
                             android:layout_height="180dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="10dp"
+                            android:layout_margin="10dp"
                             app:cardBackgroundColor="#EFF8EA"
                             app:cardCornerRadius="10dp"
                             app:cardElevation="8dp">
 
                             <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:layout_margin="10dp"
                                 android:orientation="vertical"
-                                android:layout_gravity="center_horizontal"
-                                android:padding="10dp">
+                                android:layout_gravity="center_horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -374,9 +359,9 @@
                             </LinearLayout>
 
                         </androidx.cardview.widget.CardView>
+
                     </TableRow>
-
-
+                    
                 </TableLayout>
 
             </LinearLayout>
