--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -20,136 +20,162 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:fontFamily="@font/bariol_regular"
-                android:text="Log your food intake:"
-                android:textSize="25sp" />
-
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                <View
-                    android:id="@+id/view"
-                    android:layout_width="300dp"
-                    android:layout_height="300dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/text_view_circle" />
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:fontFamily="@font/bariol_regular"
+                    android:text="Log your food intake:"
+                    android:textSize="25sp" />
 
-                <LinearLayout
+                <Button
+                    android:id="@+id/info_btn"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="20dp"
+                    android:text="i" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/info_lbl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="70dp"
-                    android:layout_marginTop="90dp"
-                    android:layout_marginRight="70dp"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <View
+                        android:id="@+id/view"
+                        android:layout_width="300dp"
+                        android:layout_height="300dp"
                         android:layout_gravity="center"
-                        android:layout_marginBottom="2dp"
-                        android:fontFamily="@font/bariol_regular"
-                        android:text="Anything eaten within the last"
-                        android:textSize="16sp" />
+                        android:layout_margin="10dp"
+                        android:background="@drawable/text_view_circle" />
 
-                    <TextView
-                        android:id="@+id/textView6"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:fontFamily="@font/bariol_bold"
-                        android:text="8 HOURS"
-                        android:textColor="@color/green"
-                        android:textSize="48sp" />
-
-                    <TableLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="70dp"
+                        android:layout_marginTop="90dp"
+                        android:layout_marginRight="70dp"
+                        android:orientation="vertical">
 
-                        <TableRow
+                        <TextView
+                            android:id="@+id/textView5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="2dp"
+                            android:fontFamily="@font/bariol_regular"
+                            android:text="Anything eaten within the last"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/textView6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/bariol_bold"
+                            android:text="8 HOURS"
+                            android:textColor="@color/green"
+                            android:textSize="48sp" />
+
+                        <TableLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
 
-                            <View
-                                android:layout_width="0dp"
-                                android:layout_height="1dp"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
-                                android:background="@color/colorPrimaryDark" />
+                            <TableRow
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent">
 
-                            <TextView
-                                android:id="@+id/textView15"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/bariol_regular"
-                                android:gravity="center"
-                                android:text="OR"
-                                android:textSize="18sp" />
+                                <View
+                                    android:layout_width="0dp"
+                                    android:layout_height="1dp"
+                                    android:layout_gravity="center"
+                                    android:layout_weight="1"
+                                    android:background="@color/colorPrimaryDark" />
 
-                            <View
-                                android:layout_width="0dp"
-                                android:layout_height="1dp"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
-                                android:background="@color/colorPrimaryDark" />
-                        </TableRow>
+                                <TextView
+                                    android:id="@+id/textView15"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/bariol_regular"
+                                    android:gravity="center"
+                                    android:text="OR"
+                                    android:textSize="18sp" />
 
-                    </TableLayout>
+                                <View
+                                    android:layout_width="0dp"
+                                    android:layout_height="1dp"
+                                    android:layout_gravity="center"
+                                    android:layout_weight="1"
+                                    android:background="@color/colorPrimaryDark" />
+                            </TableRow>
+
+                        </TableLayout>
+
+                        <TextView
+                            android:id="@+id/textView16"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/bariol_bold"
+                            android:text="LAST 2 MEALS"
+                            android:textColor="@color/green"
+                            android:textSize="30sp" />
+
+                    </LinearLayout>
+
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
                     <TextView
-                        android:id="@+id/textView16"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_marginLeft="38dp"
+                        android:layout_weight="1"
                         android:fontFamily="@font/bariol_bold"
-                        android:text="LAST 2 MEALS"
-                        android:textColor="@color/green"
-                        android:textSize="30sp" />
+                        android:text="*"
+                        android:textColor="@color/orange"
+                        android:textSize="80dp" />
 
-                </LinearLayout>
+                    <TextView
+                        android:id="@+id/textView17"
+                        android:layout_width="302dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="30dp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/bariol_regular_italic"
+                        android:paddingLeft="25dp"
+                        android:text="Any food eaten within 1 hour of each other counts as a meal."
+                        android:textSize="18dp" />
 
+                </FrameLayout>
+            </LinearLayout>
 
-            </FrameLayout>
-
-            <FrameLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_lyt"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="*"
-                    android:fontFamily="@font/bariol_bold"
-                    android:textSize="80dp"
-                    android:layout_marginLeft="38dp"
-                    android:textColor="@color/orange"/>
-
-                <TextView
-                    android:id="@+id/textView17"
-                    android:layout_width="302dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="30dp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/bariol_regular_italic"
-                    android:paddingLeft="25dp"
-                    android:text="Any food eaten within 1 hour of each other counts as a meal."
-                    android:textSize="18dp" />
-
-            </FrameLayout>
+                android:layout_height="match_parent"/>
 
         </LinearLayout>
     </ScrollView>
