--- a/app/src/main/res/layout/fragment_master_list.xml
+++ b/app/src/main/res/layout/fragment_master_list.xml
@@ -45,11 +45,9 @@
                         android:textStyle="bold" />
 
                     <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_view_lyt"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/recycler_view_lyt">
-
-                    </androidx.recyclerview.widget.RecyclerView>
+                        android:layout_height="match_parent" />
 
                     <Button
                         android:id="@+id/button5"
