--- a/app/src/main/res/layout/fragment_symptom.xml
+++ b/app/src/main/res/layout/fragment_symptom.xml
@@ -37,12 +37,12 @@
                 android:layout_marginRight="40dp"
                 android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/button"
+                <CheckBox
+                    android:id="@+id/itchy_btn"
                     android:layout_width="130dp"
                     android:layout_height="130dp"
-                    android:background="@drawable/itchy_btn"
-                    />
+                    android:button="@null"
+                    android:background="@drawable/itchy_btn" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -58,10 +58,11 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/button2"
+                <CheckBox
+                    android:id="@+id/bumpy_btn"
                     android:layout_width="130dp"
                     android:layout_height="130dp"
+                    android:button="@null"
                     android:background="@drawable/bumpy_btn" />
 
                 <TextView
@@ -85,10 +86,11 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/button3"
+                <CheckBox
+                    android:id="@+id/redness_btn"
                     android:layout_width="130dp"
                     android:layout_height="130dp"
+                    android:button="@null"
                     android:background="@drawable/redness_btn" />
 
                 <TextView
@@ -107,10 +109,11 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/button4"
+                <CheckBox
+                    android:id="@+id/scaly_btn"
                     android:layout_width="130dp"
                     android:layout_height="130dp"
+                    android:button="@null"
                     android:background="@drawable/scaly_btn" />
 
                 <TextView
