--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,35 +52,45 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <LinearLayout
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal">-->
+
+
+<!--        <CheckBox-->
+<!--            android:id="@+id/home_btn"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:button="@null"-->
+<!--            android:background="@drawable/home_btn" />-->
+
+<!--        <CheckBox-->
+<!--            android:id="@+id/master_lst_btn"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:button="@null"-->
+<!--            android:background="@drawable/masterlist_btn" />-->
+
+<!--        <CheckBox-->
+<!--            android:id="@+id/insight_btn"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:button="@null"-->
+<!--            android:background="@drawable/insights_btn" />-->
+
+
+<!--    </LinearLayout>-->
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-
-        <ImageButton
-            android:id="@+id/home_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/home_btn" />
-
-        <ImageButton
-            android:id="@+id/master_lst_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/masterlist_btn" />
-
-        <ImageButton
-            android:id="@+id/insight_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/insights_btn" />
-
-
-    </LinearLayout>
+        app:menu="@menu/navigation_bar"
+        app:labelVisibilityMode="unlabeled" />
 
 
 </LinearLayout>
